--- a/isu1-etc/nginx/nginx.conf
+++ b/isu1-etc/nginx/nginx.conf
@@ -34,26 +34,36 @@ http {
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
     include /etc/nginx/conf.d/*.conf;
-
+	upstream isu {
+		server 127.0.0.1:8080
+	}
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
+        server_name  torb.example.com;
+        root         /home/isucon/torb/webapp;
 
         # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+        #include /etc/nginx/default.d/*.conf;
 
         location / {
+			try_files $uri @isu
         }
 
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
+		location @isu {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_pass http://isu;
+		}
 
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
+#        error_page 404 /404.html;
+#            location = /40x.html {
+#        }
+
+#        error_page 500 502 503 504 /50x.html;
+#            location = /50x.html {
+#        }
     }
 
 # Settings for a TLS enabled server.
