cache static files in nginx conf

--- a/isu1-etc/nginx/nginx.conf
+++ b/isu1-etc/nginx/nginx.conf
@@ -15,9 +15,14 @@ events {
 }
 
 http {
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+	
+	
+	log_format with_time '$remote_addr - $remote_user [$time_local] '
+					'"$request" $status $body_bytes_sent '
+					'"$http_referer" "$http_user_agent" $request_time';
 
     access_log  /var/log/nginx/access.log  main;
 
@@ -35,19 +40,27 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 	upstream isu {
-		server 127.0.0.1:8080
+		server 127.0.0.1:8080;
 	}
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
         server_name  torb.example.com;
-        root         /home/isucon/torb/webapp;
+        root         /home/isucon/torb/webapp/static;
 
         # Load configuration files for the default server block.
         #include /etc/nginx/default.d/*.conf;
 
+		location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+            try_files $uri @isu;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            etag off;
+        }
+
         location / {
-			try_files $uri @isu
+			try_files $uri @isu;
         }
 
 		location @isu {
