--- a/isu1-etc/nginx/nginx.conf
+++ b/isu1-etc/nginx/nginx.conf
@@ -4,6 +4,7 @@
 
 user nginx;
 worker_processes auto;
+worker_rlimit_nofile 65535;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
 
@@ -11,7 +12,7 @@ pid /run/nginx.pid;
 include /usr/share/nginx/modules/*.conf;
 
 events {
-    worker_connections 1024;
+    worker_connections 2048;
 }
 
 http {
@@ -24,7 +25,7 @@ http {
 					'"$request" $status $body_bytes_sent '
 					'"$http_referer" "$http_user_agent" $request_time';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access.log  with_time;
 
     sendfile            on;
     tcp_nopush          on;
