--- a/isu1-etc/my.cnf
+++ b/isu1-etc/my.cnf
@@ -21,3 +21,6 @@ pid-file=/var/run/mariadb/mariadb.pid
 [mysqld]
 sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
 # END ANSIBLE MANAGED BLOCK mariadb
+#
+innodb_buffer_pool_size = 600M
+max_connections = 1200
