--- a/isu1-etc/nginx/nginx.conf
+++ b/isu1-etc/nginx/nginx.conf
@@ -42,6 +42,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 	upstream isu {
 		server 127.0.0.1:8080;
+		server 172.16.195.3;
 	}
     server {
         listen       80 default_server;
