--- a/isu2-etc/systemd/system/torb.ruby.service
+++ b/isu2-etc/systemd/system/torb.ruby.service
@@ -5,7 +5,7 @@ Description = isucon8 qualifier webapp in ruby
 WorkingDirectory=/home/isucon/torb/webapp/ruby
 EnvironmentFile=/home/isucon/torb/webapp/env.sh
 
-ExecStart = /home/isucon/local/ruby/bin/bundle exec rackup -p 8080
+ExecStart = /home/isucon/local/ruby/bin/bundle exec rackup -p 8080 -O Threads=0:8
 
 Restart   = always
 Type      = simple
