--- a/isu1-etc/nginx/nginx.conf
+++ b/isu1-etc/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
 					'"$request" $status $body_bytes_sent '
 					'"$http_referer" "$http_user_agent" $request_time';
 
-    access_log  /var/log/nginx/access.log  with_time;
+    access_log		off;
 
     sendfile            on;
     tcp_nopush          on;
