--- a/isu1-etc/nginx/nginx.conf
+++ b/isu1-etc/nginx/nginx.conf
@@ -32,7 +32,17 @@ http {
     tcp_nodelay         on;
     keepalive_timeout   65;
     types_hash_max_size 2048;
-
+    large_client_header_buffers 4 256k;
+    gzip  on;
+    gzip_proxied any;
+    gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript application/json;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_comp_level 6;
+    open_file_cache max=10000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
 
